--- a/assets/css/booklist.css
+++ b/assets/css/booklist.css
@@ -1,7 +1,7 @@
  body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(to right, #0f2027, #5e60f3, #2c5364);
       color: #fff;
       padding: 40px;
     }
