--- a/assets/css/addbook.css
+++ b/assets/css/addbook.css
@@ -8,7 +8,7 @@
 
     body {
       min-height: 100vh;
-      background: #0f2027;
+      background: #5e60f3;
       display: flex;
       justify-content: center;
       align-items: center;
